--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I’m Phoebe<br />
-											by HTML5 UP</h1>
+											Nice to meet you</h1>
 											<p>ho ho ha ha hi hi</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>Phoebe Buffay (born 16 February 1967/1968)[1] is one of the six main characters from the American television sitcom, Friends. She was created by David Crane and Marta Kauffman and portrayed by actress Lisa Kudrow.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
